/*
* This file was generated by the CommonAPI Generators.
* Used org.genivi.commonapi.core 3.2.15.v202410041619.
* Used org.franca.core 0.13.1.201807231814.
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
* If a copy of the MPL was not distributed with this file, You can obtain one at
* http://mozilla.org/MPL/2.0/.
*/
#ifndef V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_HPP_
#define V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_HPP_

#include <v1/omnimetron/gpu/GpuUsageDataProxyBase.hpp>


#if !defined(COMMONAPI_INTERNAL_COMPILATION)
#define COMMONAPI_INTERNAL_COMPILATION
#define HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE
#endif


#if defined(HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE)
#undef COMMONAPI_INTERNAL_COMPILATION
#undef HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE
#endif

namespace v1 {
namespace omnimetron {
namespace gpu {

template <typename ... _AttributeExtensions>
class GpuUsageDataProxy
    : virtual public GpuUsageData,
      virtual public GpuUsageDataProxyBase,
      virtual public _AttributeExtensions... {
public:
    GpuUsageDataProxy(std::shared_ptr<CommonAPI::Proxy> delegate);
    ~GpuUsageDataProxy();

    typedef ::v1::omnimetron::gpu::GpuUsageData InterfaceType;


    /**
     * Returns the CommonAPI address of the remote partner this proxy communicates with.
     */
    virtual const CommonAPI::Address &getAddress() const;

    /**
     * Returns true if the remote partner for this proxy is currently known to be available.
     */
    virtual bool isAvailable() const;

    /**
     * Returns true if the remote partner for this proxy is available.
     */
    virtual bool isAvailableBlocking() const;

    /**
     * Returns the wrapper class that is used to(de-)register for notifications about
     * the availability of the remote partner of this proxy.
     */
    virtual CommonAPI::ProxyStatusEvent& getProxyStatusEvent();

    /**
     * Returns the wrapper class that is used to access version information of the remote
     * partner of this proxy.
     */
    virtual CommonAPI::InterfaceVersionAttribute& getInterfaceVersionAttribute();

    virtual std::future<void> getCompletionFuture();

    /**
     * Returns the wrapper class that provides access to the broadcast notifyGpuUsageDataChange.
     */
    virtual NotifyGpuUsageDataChangeEvent& getNotifyGpuUsageDataChangeEvent() {
        return delegate_->getNotifyGpuUsageDataChangeEvent();
    }
    /**
     * Calls requestGpuUsageData with synchronous semantics.
     *
     * All non-const parameters will be filled with the returned values.
     * The CallStatus will be filled when the method returns and indicate either
     * "SUCCESS" or which type of error has occurred. In case of an error, ONLY the CallStatus
     * will be set.
     */
    virtual void requestGpuUsageData(CommonAPI::CallStatus &_internalCallStatus, float &_usage, const CommonAPI::CallInfo *_info = nullptr);
    /**
     * Calls requestGpuUsageData with asynchronous semantics.
     *
     * The provided callback will be called when the reply to this call arrives or
     * an error occurs during the call. The CallStatus will indicate either "SUCCESS"
     * or which type of error has occurred. In case of any error, ONLY the CallStatus
     * will have a defined value.
     * The std::future returned by this method will be fulfilled at arrival of the reply.
     * It will provide the same value for CallStatus as will be handed to the callback.
     */
    virtual std::future<CommonAPI::CallStatus> requestGpuUsageDataAsync(RequestGpuUsageDataAsyncCallback _callback = nullptr, const CommonAPI::CallInfo *_info = nullptr);



 private:
    std::shared_ptr< GpuUsageDataProxyBase> delegate_;
};

typedef GpuUsageDataProxy<> GpuUsageDataProxyDefault;


//
// GpuUsageDataProxy Implementation
//
template <typename ... _AttributeExtensions>
GpuUsageDataProxy<_AttributeExtensions...>::GpuUsageDataProxy(std::shared_ptr<CommonAPI::Proxy> delegate):
        _AttributeExtensions(*(std::dynamic_pointer_cast< GpuUsageDataProxyBase>(delegate)))...,
        delegate_(std::dynamic_pointer_cast< GpuUsageDataProxyBase>(delegate)) {
}

template <typename ... _AttributeExtensions>
GpuUsageDataProxy<_AttributeExtensions...>::~GpuUsageDataProxy() {
}

template <typename ... _AttributeExtensions>
void GpuUsageDataProxy<_AttributeExtensions...>::requestGpuUsageData(CommonAPI::CallStatus &_internalCallStatus, float &_usage, const CommonAPI::CallInfo *_info) {
    delegate_->requestGpuUsageData(_internalCallStatus, _usage, _info);
}

template <typename ... _AttributeExtensions>
std::future<CommonAPI::CallStatus> GpuUsageDataProxy<_AttributeExtensions...>::requestGpuUsageDataAsync(RequestGpuUsageDataAsyncCallback _callback, const CommonAPI::CallInfo *_info) {
    return delegate_->requestGpuUsageDataAsync(_callback, _info);
}

template <typename ... _AttributeExtensions>
const CommonAPI::Address &GpuUsageDataProxy<_AttributeExtensions...>::getAddress() const {
    return delegate_->getAddress();
}

template <typename ... _AttributeExtensions>
bool GpuUsageDataProxy<_AttributeExtensions...>::isAvailable() const {
    return delegate_->isAvailable();
}

template <typename ... _AttributeExtensions>
bool GpuUsageDataProxy<_AttributeExtensions...>::isAvailableBlocking() const {
    return delegate_->isAvailableBlocking();
}

template <typename ... _AttributeExtensions>
CommonAPI::ProxyStatusEvent& GpuUsageDataProxy<_AttributeExtensions...>::getProxyStatusEvent() {
    return delegate_->getProxyStatusEvent();
}

template <typename ... _AttributeExtensions>
CommonAPI::InterfaceVersionAttribute& GpuUsageDataProxy<_AttributeExtensions...>::getInterfaceVersionAttribute() {
    return delegate_->getInterfaceVersionAttribute();
}


template <typename ... _AttributeExtensions>
std::future<void> GpuUsageDataProxy<_AttributeExtensions...>::getCompletionFuture() {
    return delegate_->getCompletionFuture();
}

} // namespace gpu
} // namespace omnimetron
} // namespace v1



// Compatibility
namespace v1_0 = v1;

#endif // V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_HPP_
