/*
* This file was generated by the CommonAPI Generators.
* Used org.genivi.commonapi.core 3.2.15.v202410041619.
* Used org.franca.core 0.13.1.201807231814.
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
* If a copy of the MPL was not distributed with this file, You can obtain one at
* http://mozilla.org/MPL/2.0/.
*/
#ifndef V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_BASE_HPP_
#define V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_BASE_HPP_

#include <v1/omnimetron/gpu/GpuUsageData.hpp>



#if !defined(COMMONAPI_INTERNAL_COMPILATION)
#define COMMONAPI_INTERNAL_COMPILATION
#define HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE
#endif

#include <vector>

#include <CommonAPI/Event.hpp>
#include <CommonAPI/Proxy.hpp>
#include <functional>
#include <future>

#if defined(HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE)
#undef COMMONAPI_INTERNAL_COMPILATION
#undef HAS_DEFINED_COMMONAPI_INTERNAL_COMPILATION_HERE
#endif

namespace v1 {
namespace omnimetron {
namespace gpu {

class GpuUsageDataProxyBase
    : virtual public CommonAPI::Proxy {
public:
    typedef CommonAPI::Event<
        float
    > NotifyGpuUsageDataChangeEvent;

    typedef std::function<void(const CommonAPI::CallStatus&, const float&)> RequestGpuUsageDataAsyncCallback;

    virtual NotifyGpuUsageDataChangeEvent& getNotifyGpuUsageDataChangeEvent() = 0;
    virtual void requestGpuUsageData(CommonAPI::CallStatus &_internalCallStatus, float &_usage, const CommonAPI::CallInfo *_info = nullptr) = 0;
    virtual std::future<CommonAPI::CallStatus> requestGpuUsageDataAsync(RequestGpuUsageDataAsyncCallback _callback = nullptr, const CommonAPI::CallInfo *_info = nullptr) = 0;

    virtual std::future<void> getCompletionFuture() = 0;
};

} // namespace gpu
} // namespace omnimetron
} // namespace v1


// Compatibility
namespace v1_0 = v1;

#endif // V1_OMNIMETRON_GPU_Gpu_Usage_Data_PROXY_BASE_HPP_
